--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -111,5 +111,19 @@ ul, ol {
 }
 
 ul {
-    list-style: square;
+    list-style: disc;
+}
+
+@mixin mdi($content: null)
+{
+    @if ($content != null) {
+        content: $content;
+    }
+    display: inline-block;
+    font: normal normal normal 24px/1 "Material Design Icons";
+    font-size: inherit;
+    text-rendering: auto;
+    line-height: inherit;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
