--- a/resources/sass/components/_contextmenu.scss
+++ b/resources/sass/components/_contextmenu.scss
@@ -88,6 +88,6 @@
     hr {
         margin: 4px 0;
         height: 1px;
-        background-color: rgba(255, 255, 255, 0.16);
+        background-color: rgba(black, 0.16);
     }
 }
