--- a/resources/sass/components/_article.scss
+++ b/resources/sass/components/_article.scss
@@ -94,8 +94,10 @@ $article-header-avatar-size: 40px;
             p {
                 position: absolute;
                 top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                padding: 0 6px;
+                transform: translateY(-50%);
+                width: 100%;
+                text-align: center;
                 font-size: 14px;
                 user-select: text;
             }
