--- a/resources/sass/components/_input.scss
+++ b/resources/sass/components/_input.scss
@@ -141,17 +141,17 @@ label.text-input {
 
 $profile-page-links-input-border-color: #bbb;
 table.profile-links {
-    width: 400px;
+    width: 380px;
     max-width: 100%;
     border-collapse: separate;
-    padding: 0 10px;
+    //padding: 0 10px;
     tr {
         position: relative;
         border-radius: 4px;
         font-size: 14px;
         transition: box-shadow .12s;
         &.spacer {
-            height: 10px;
+            height: 6px;
             border: none;
             border-radius: 0;
             box-shadow: none;
@@ -386,4 +386,32 @@ div.input {
             width: 100% !important;
         }
     }
+}
+
+#kDosXcdq,
+#SoxCmdfF,
+#OdIedXcv {
+    display: none;
+    position: absolute;
+    right: 10px;
+    bottom: 0;
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
+    font-size: 20px;
+    text-align: center;
+    &.shown {
+        display: block;
+    }
+}
+
+#kDosXcdq {
+    color: $green;
+}
+#SoxCmdfF {
+    color: #bfa135;
+}
+
+#OdIedXcv {
+    color: #cf3b3b;
 }
