データベース設計、利用規約、フッターデザインの変更、select要素に検索機能を追加 等

--- a/resources/sass/components/_article-sidebar.scss
+++ b/resources/sass/components/_article-sidebar.scss
@@ -25,7 +25,7 @@
 }
 
 .search-container {
-    margin-top: 10px;
+    margin-top: .5rem;
     padding: 12px;
     background-color: rgb(241, 241, 241);
     border-radius: 4px;
