--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,15 +1,23 @@
-// Variables
+// Variable & Mixins
 @import 'variables';
+@import 'base/mixins';
 
-// Imports
-@import 'base';
-@import 'components/classes';
+// Libs
+@import "libs/bootstrap-grid.min.css";
 
+// Bases
+@import 'base/base';
+@import 'base/tags';
+@import 'base/paragraph';
+@import 'base/classes';
+
+// Layouts
 @import 'layouts/header';
 @import 'layouts/body';
 @import 'layouts/sidebar';
 @import 'layouts/footer';
 
+// Components
 @import 'components/article';
 @import 'components/article-sidebar';
 @import 'components/error-box';
@@ -19,23 +27,20 @@
 @import 'components/contextmenu';
 @import 'components/pagination';
 
-@import 'components/profilePage';
-@import 'components/login';
+// Pages
+@import 'pages/profilePage';
+@import 'pages/login';
 
 .content-box {
     margin: 10px auto;
-    padding: 12px;
+    padding: 28px;
     background-color: rgb(241, 241, 241);
-    max-width: 700px;
+    max-width: 780px;
     border-radius: 4px;
     box-sizing: border-box;
-    @media screen and (min-width: 600px) {
-        &.big-padding {
-            padding: 24px;
-        }
-    }
     @media screen and (max-width: $sp-size) {
         margin: 0;
+        padding: 12px;
         width: 100%;
         border-radius: 0;
     }
@@ -92,29 +97,4 @@
         background-color: #b8b8b8;
         border-radius: 1.5px;
     }
-}
-
-//html {
-//    &::-webkit-scrollbar {
-//        width: 15px;
-//        height: 15px;
-//    }
-//    &::-webkit-scrollbar-track {
-//        background-color: darken($primary-color, 30);
-//    }
-//    &::-webkit-scrollbar-thumb {
-//        background-color: $primary-color;
-//        border-radius: 5px;
-//        border: solid 3px darken($primary-color, 30);
-//        &:hover {
-//            background-color: darken($primary-color, 5);
-//        }
-//        &:active {
-//            background-color: darken($primary-color, 10);
-//        }
-//    }
-//}
-
-.user-select-all {
-    user-select: all;
 }
