--- a/resources/sass/components/_input.scss
+++ b/resources/sass/components/_input.scss
@@ -15,19 +15,22 @@ label.input {
     > input, textarea, select {
         display: block;
         width: 100%;
-        padding: 0 12px;
+        padding: 0 10px;
         font-size: 14px;
-        background-color: #efefef;
-        border: solid 1px #bbb;
+        border: solid 1px hsl(0,0%,80%);
         border-radius: 4px;
         box-sizing: border-box;
         transition: background-color .12s, border-color .12s, box-shadow .12s;
+        &:hover {
+            border-color: hsl(0,0%,70%);
+        }
         &:focus {
-            background-color: #ececec;
-            box-shadow: 0 0 0 3px rgba(black, .1);
+            //background-color: #ececec;
+            box-shadow: 0 0 0 1px #2684ff;
+            border: solid 1px #2684ff;
         }
         &:disabled {
-            background-color: #ececec;
+            //background-color: #ececec;
             color: #6d6d6d;
             cursor: not-allowed;
         }
@@ -421,4 +424,8 @@ div.input {
 
 #OdIedXcv {
     color: #cf3b3b;
+}
+
+.css-1uccc91-singleValue {
+    //font-size: 16px !important;
 }
