--- a/resources/sass/layouts/_body.scss
+++ b/resources/sass/layouts/_body.scss
@@ -4,6 +4,7 @@
     margin: 0 auto;
     width: 100%;
     max-width: 1400px;
+    min-height: calc( 100vh - #{$header-height + 50px + 80px} );
     .body-content {
         display: table-cell;
         vertical-align: top;
