--- a/resources/sass/layouts/_sidebar.scss
+++ b/resources/sass/layouts/_sidebar.scss
@@ -3,6 +3,6 @@
     vertical-align: top;
     table-layout: fixed;
     width: $sidebar-width;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    padding-right: .5rem;
+    padding-bottom: .5rem;
 }
